--- a/src/file-tree.css
+++ b/src/file-tree.css
@@ -5,7 +5,7 @@
 }
 
 .file-tree-item {
-    width: 100%;
+    min-width: 100%;
     padding-left: calc(0.25rem + var(--depth, 0) * 1.3rem);
 }
 
